overflow-x: hidden; correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,11 +10,16 @@
     padding: 0;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow-x: hidden;
+    
     background-color: var(--light-color);
     font-family: var(--font-text);
     user-select: none;
